exercise.css
body {
    background-image: url('images/background-index.png');
    background-position: center center;
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-size: cover;
}

.openButton {
    background-color: transparent;
    border: 2px solid white;
    color: white;
    padding: 10px 20px;
    cursor: pointer;
}

.openButton:hover {
    background-color: #fff;
    color: #000;
}


.modalExercise {
    position: fixed;
    inset: 0;
    background-color: rgba(0, 0, 0, 0.8);
    cursor: pointer;
    padding: 30px;
    overflow-y: auto;
    display: none;
}

.modalMain {
    position: relative;
    max-width: 700px;
    background-color: rgb(69, 68, 68);
    margin: auto;
    color: white;
    cursor: default;
}

.header {
    display: flex;
    justify-content: space-between;
    background-color: rgb(57, 57, 57);
    margin-bottom: 10px;
}


.header .modalTitle {
    font-size: 50px;
    margin: 0 auto;
}

.header .closeButton {
    cursor: pointer;
    font-size: 20px;
    color: red;
    border:0;
    background-color: black;
    width: 8%;
}

.modalMain img {
    width: 60%;
    max-width: 100%; 
    display: block;   
    margin: 0 auto;  
}

.descriptionContainer {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.descriptionContainer h3 {
    font-size: 40px;
    width:100%;
    height: 100%;
    background-color: rgb(57, 57, 57);
    text-align: center;
    margin: 10px 10px;
}

.descriptionContainer p {
    font-size: 24px;
    text-align: center;
    margin: 10px 10px; 
}

